<?xml version="1.0"?>
<package>
  <name>rosmc_3d_gui</name>
  <version>2.1.6</version>
  <description>
    The rosmc_3d_gui package
  </description>
  <maintainer email="Ryo.Sakagami@dlr.de">Ryo Sakagami</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
