<?xml version="1.0"?>
<package>
  <name>rosmc_command_gui</name>
  <version>2.1.6</version>
  <description>The rosmc_command_gui package</description>

  <maintainer email="ryo.sakagami@dlr.de">Ryo Sakagami</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosmc_msgs</build_depend>
  <build_depend>rosmc_interface_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rosmc_msgs</run_depend>
  <run_depend>rosmc_interface_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
