<?xml version="1.0"?>
<package>
  <name>rosmc_msgs</name>
  <version>2.1.6</version>
  <description>
    The rosmc_msgs package
  </description>
  <maintainer email="Ryo.Sakagami@dlr.de">Ryo Sakagami</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosmc_interface_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>rosmc_interface_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
  </export>
</package>
