<?xml version="1.0"?>
<package>
  <name>rosmc_status_monitor</name>
  <version>2.1.6</version>
  <description>The rosmc_status_monitor package</description>

  <maintainer email="Ryo.Sakagami@dlr.de">Ryo Sakagami</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosmc_msgs</build_depend>
  <build_depend>rosmc_interface_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>jsk_rviz_plugins</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>rosmc_msgs</run_depend>
  <run_depend>rosmc_interface_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>jsk_rviz_plugins</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>

</package>
